kubernetes/infrastructure/longhorn/manifests/longhorn-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn-httproute
  namespace: authentik
spec:
  parentRefs:
    - name: default-gateway
      namespace: kube-system
  hostnames:
    - longhorn.nieradko.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: ak-outpost-default-outpost
          port: 9000
